--- a/LaTeX報告/first.tex
+++ b/LaTeX報告/first.tex
@@ -18,7 +18,7 @@ left=2.5truecm,right=2.5truecm]{geometry}
 \usepackage{hyperref} %引用url連結
 \usepackage{graphicx} %插入圖片
 \usepackage{fontawesome5} %引用icon
-\linespread{1.5} %設定行距
+%\linespread{1.5} %設定行距
 \lstset{language=Python, %設定語言
 		basicstyle=\footnotesize, 
 		frame=lines,
@@ -152,10 +152,11 @@ Application of reinforcement
 
 \qquad 神經訊號傳遞分為前饋（feed-forward）和回饋（backpropagation）。前饋為傳遞經過啟動函數計算的數值。回饋則是修正權重和偏差（biases），以提高下次前饋計算的準確度。
 \subsection{啟動函數}
+\iffalse %整段註解(開頭)
 \begin{itemize}
-\item Sigmoid Function\\
+\item Sigmoid Function：\\
 \qquad 一種啟動函數，是類神經網路的關鍵部分之一 ，且可以微分，並可以讓類神經網路為非線性。\\
-\begin{Large}$$\sigma(x)=\frac{1}{1+e^{-x}}$$ \end{Large}\\[6pt]
+$$\sigma(x)=\frac{1}{1+e^{-x}}$$ \\[6pt]
 \begin{figure}[hbt!]
 \begin{center}
 \includegraphics[scale=0.74]{sigmoid_function}
@@ -164,11 +165,12 @@ from: \href{https://towardsdatascience.com/derivative-of-the-sigmoid-function-53
 \end{center}
 \end{figure}
 %=----------SigmoidPrime Function----------=%
-\item SigmoidPrime Function\\
-\qquad 這是從Sigmoid Function微分得來，可以減少梯度誤差，因此他是 loss function 的其中一種， 以下為 SigmoidPrime的證明:\\
-\begin{Large}$$\sigma(x)=\frac{1}{1+e^{-x}}$$ \end{Large}\\[6pt]
-$$\sigma^{'}(x)=\frac{d}{dx}\sigma(x)=\frac{d}{dx}\frac{1}{1+e^{-x}}=\frac{d}{dx}(1+e^{-x})^{-1}$$\\[6pt]
-%$$-------------skip-------------$$\\[6pt]
+\item SigmoidPrime Function：\\
+\qquad 這是從Sigmoid Function微分得來，可以減少梯度誤差，因此他是 loss function 的其中一種:\\[12pt]
+$$\sigma^{'}(x)=\sigma(x)[1-\sigma(x)]$$\\[3pt]
+
+以下為 SigmoidPrime的證明
+%$$-------------skip-------------$$
 Tip: find $f^{'}(x)$ if $f(x)=\frac{A}{B+Ce^{x}}$\\
 Answer:\\
 $$\frac{d}{dx}[\frac{1}{g(x)}]=\frac{1^{'}g(x)-1g^{'}(x)}{g(x)^2}=\frac{g^{'}(x)}{[g(x)]^2}$$\\
@@ -181,7 +183,8 @@ $$=-(1+e^{-x})^{-2}\frac{d}{dx}(1+e^{-x})=-(1+e^{-x})^{-2}[\frac{d}{dx}(1)+\frac
 $$=-(1+e^{-x})^{-2}[0+\frac{d}{dx}(e^{-x})]=-(1+e^{-x})^{-2}[\frac{d}{dx}(e^{-x})]=-(1+e^{-x})^{-2}[e^{-x}\frac{d}{dx}(-x)]$$\\
 $$-(1+e^{-x})^{-2}[e^{-x}(-1)]=-(1+e^{-x})^{-2}(-e^{-x})=\frac{e^{-x}}{(1+e^{-x})^2}=\frac{1(e^{-x})}{(1+e^{-x})(1+e^{-x})}$$\\
 $$=\frac{1}{1+e^{-x}}\frac{e^{-x}}{1+e^{-x}}=\frac{1}{1+e^{-x}}\frac{e^{-x}+1-1}{1+e^{-x}}=\frac{1}{1+e^{-x}}(\frac{1+e^{-x}}{1+e^{-x}}-\frac{1}{1+e^{-x}})$$\\[6pt]
-\begin{Large}$$=\sigma(x)[1-\sigma(x)]$$\end{Large}\\
+
+
 \begin{figure}[hbt!]
 \begin{center}
 \includegraphics[scale=0.80]{sigmoidprime}
@@ -230,6 +233,41 @@ $$MSE=\frac{1}{n} \sum_{i=1}^n(y_i-\overline{y} _i)^2$$
 \end{Large}\\[6pt]
 \newpage
 \end{itemize}
+\fi %整段註解(結尾)
+\subsection{優化器}
+為了讓AI學習的錯誤率降低，因此利用優化器來降低loss function的值，在error surface上找到最小值，即是找到錯誤率最低的地方。以下將介紹幾種優化的方法：
+\begin{itemize}
+\item Gradient Descent\\[6pt]
+利用梯度的方式尋找最小值的位置，其特色可找到凸面error surface的絕對最小值，在非凸面error surface上找到相對最小值。其缺點是在非凸面error surface要避免被困在次優的局部最小值。\\
+\item Batch gradient descent\\[6pt]
+用批次的方式計算訓練資料，整個資料集計算梯度只更新一次，因此計算和更新時會占用大量記憶體。整體效率較差、速度較緩慢。由 Gradient Descent 延伸出來的算法。其收斂行為與 Gradient Descent 相同。\\
+\item Stochastic gradient descent\\[6pt]
+每次執行時會更新並消除誤差，有頻繁更新和變化大的特性，較不容易困在特定區域。由 Gradient Descent 延伸出來的算法。其收斂行為與 Gradient Descent 相同。\\
+\item Mini-batch gradient descent\\[6pt]
+結合 Batch gradient descent 和 Stochastic gradient descent 的特點：批量計算和頻繁更新，所衍伸的算法。利用小批量的方式頻繁更新，並使收斂更穩定。其缺點：學習率挑選不易、預定義 threshold 無法適應數據集的特徵、對很少發生的特徵無法執行較大的更新、非凸面error surface要避免被困在次優的局部最小值等。\\
+\item Gradient descent optimization algorithms\\[6pt]
+為了改善前面幾種算法而發展出來的優化算法。以下將列出數種優化算法。\\
+\item Momentum\\[6pt]
+在梯度下降法加上動量的概念，會加速收斂到最小值並減少震盪。\\
+\item Nesterov accelerated gradient\\[6pt]
+NAG，有感知能力的 Momentum：在坡度變陡時減速，避免衝過最小值所造成的震盪(為了修正到最小值，來回修正而產生的震盪)\\
+\item Adagrad\\[6pt]
+其學習率能適應參數：頻繁出現的特徵用較低的學習率，不經常出現的特徵則用較高的學習率，且無須手動調整學習率。其缺點是，學習率會急遽下降，最後會無限小，這算法就不再獲得知識。\\
+\item Adadelta\\[6pt]
+為 Adagrad 的延伸，下降激進程度，學習率從更新規則中淘汰，不需設定預設學習率。\\
+\item RMSprop\\[6pt]
+為了解決 Adagrad 學習率急劇下降的問題，學習率除以梯度平方的RMS，解決學習率無限小的情形。\\
+\item Adam\\[6pt]
+類似 Momentum，更加穩定快速的收斂。\\
+\item AdaMax\\[6pt]
+與 Adam 相似，依靠$(u_t)$ 最大運算\\
+\item Nadam\\[6pt]
+結合 Adam 和 NAG ，應用先前參數執行兩次更新，一次更新參數一次更新梯度。\\
+\item AMSGrad\\[6pt]
+改善 Adam 算法所導致收斂較差的情況(用指數平均會減少其影響)，換用梯度平方最大值來做計算，並移除去偏差的步驟。是否有比 Adam 算法好仍有待觀察。\\
+\item Gradient noise\\[6pt]
+有助於訓練特別深且復雜的網絡，noise 可改善不良初始化的網路。\\
+\end{itemize}
 \section{深度學習}
 %=----------deep learning 會在此時崛起?----------------=%
 \begin{itemize}
@@ -249,35 +287,12 @@ $$MSE=\frac{1}{n} \sum_{i=1}^n(y_i-\overline{y} _i)^2$$
 \newpage
 \section{強化學習}
 %=----------What is Reinforcement Learning?------------=%
-\item 什麼是強化學習??\\
 強化學習是通過agent與已知或未知的環境持互動，不斷適應與學習，得到的回饋可能是正面，也就是reward，如果得到負面，那就是punishments。考慮到agent與環境互動，我們就能決定要執行哪個動作。簡而言之，強化學習是建立在reward與punishments上。\\[6pt]
-\\
-\begin{large}
-\textbf{強化學習的重點:}
-\end{large}\\
-\begin{itemize}
-\item 與其他機器學習不同，因為我們不需要在意訓練數據集。
-\end{itemize}
-\begin{itemize}
-\item 互動不是發生在數據上，而是在環境下發生，通過互動描繪出真實的場景。
-\end{itemize}
-\begin{itemize}
-\item 由於強化學習是建立在環境的，因此許多參數進行運算，需要大量信息來學習，並根據此採取行動。
-\end{itemize}
-\begin{itemize}
-\item 強化學習的環境是真實世界，可能是2D或3D模擬世界的場景，也可能是建立於遊戲的場景。
-\end{itemize}
-\begin{itemize}
-\item 從某種意義上來說，強化學習的範圍很廣，因為環境的規模可能很大，並且在環境中有多相關因素，影響著彼此。
-\end{itemize}
-\begin{itemize}
-\item  強化學習的目的是達到目標。
-\end{itemize}
-\begin{itemize}
-\item 強化學習的獎勵是來自環境
-\end{itemize}
+%====================須修改====================%
+與其他機器學習不同，因為我們不需要在意訓練數據集。互動不是發生在數據上，而是在環境下發生，通過互動描繪出真實的場景。由於強化學習是建立在環境的，因此許多參數進行運算，需要大量信息來學習，並根據此採取行動。強化學習的環境是真實世界，可能是2D或3D模擬世界的場景，也可能是建立於遊戲的場景。從某種意義上來說，強化學習的範圍很廣，因為環境的規模可能很大，並且在環境中有多相關因素，影響著彼此。強化學習的目的是達到目標。強化學習的獎勵是來自環境。
 %=----------Faces of Reinforcement Learning---------------=%
 \item 強化學習涵蓋範圍\\
+%======需文字補充========%
 \begin{figure}[hbt!]
 \begin{center}
 \includegraphics[scale=0.74]{Faces_of_Reinforcement_Learning}
@@ -483,41 +498,8 @@ $$\approx \frac{1}{S} \sum_{s=1}^{S}f(z^{(s)})\nabla_\theta \log p(z^{(s)};\thet
 \newpage
 \section{比較個方法的特色}
 \newpage
-\chapter{優化器及馬可夫決策}
-\section{優化器}
-為了讓AI學習的錯誤率降低，因此利用優化器來降低loss function的值，在error surface上找到最小值，即是找到錯誤率最低的地方。以下將介紹幾種優化的方法：
-\begin{itemize}
-\item Gradient Descent\\
-利用梯度的方式尋找最小值的位置，其特色可找到凸面error surface的絕對最小值，在非凸面error surface上找到相對最小值。其缺點是在非凸面error surface要避免被困在次優的局部最小值。\\
-\item Batch gradient descent\\
-用批次的方式計算訓練資料，整個資料集計算梯度只更新一次，因此計算和更新時會占用大量記憶體。整體效率較差、速度較緩慢。由 Gradient Descent 延伸出來的算法。其收斂行為與 Gradient Descent 相同。\\
-\item Stochastic gradient descent\\
-每次執行時會更新並消除誤差，有頻繁更新和變化大的特性，較不容易困在特定區域。由 Gradient Descent 延伸出來的算法。其收斂行為與 Gradient Descent 相同。\\
-\item Mini-batch gradient descent\\
-結合 Batch gradient descent 和 Stochastic gradient descent 的特點：批量計算和頻繁更新，所衍伸的算法。利用小批量的方式頻繁更新，並使收斂更穩定。其缺點：學習率挑選不易、預定義 threshold 無法適應數據集的特徵、對很少發生的特徵無法執行較大的更新、非凸面error surface要避免被困在次優的局部最小值等。\\
-\item Gradient descent optimization algorithms\\
-為了改善前面幾種算法而發展出來的優化算法。以下將列出數種優化算法。\\
-\item Momentum\\
-在梯度下降法加上動量的概念，會加速收斂到最小值並減少震盪。\\
-\item Nesterov accelerated gradient\\
-NAG，有感知能力的 Momentum：在坡度變陡時減速，避免衝過最小值所造成的震盪(為了修正到最小值，來回修正而產生的震盪)\\
-\item Adagrad\\
-其學習率能適應參數：頻繁出現的特徵用較低的學習率，不經常出現的特徵則用較高的學習率，且無須手動調整學習率。其缺點是，學習率會急遽下降，最後會無限小，這算法就不再獲得知識。\\
-\item Adadelta\\
-為 Adagrad 的延伸，下降激進程度，學習率從更新規則中淘汰，不需設定預設學習率。\\
-\item RMSprop\\
-為了解決 Adagrad 學習率急劇下降的問題，學習率除以梯度平方的RMS，解決學習率無限小的情形。\\
-\item Adam\\
-類似 Momentum，更加穩定快速的收斂。\\
-\item AdaMax\\
-與 Adam 相似，依靠$(u_t)$ 最大運算\\
-\item Nadam\\
-結合 Adam 和 NAG ，應用先前參數執行兩次更新，一次更新參數一次更新梯度。\\
-\item AMSGrad\\
-改善 Adam 算法所導致收斂較差的情況(用指數平均會減少其影響)，換用梯度平方最大值來做計算，並移除去偏差的步驟。是否有比 Adam 算法好仍有待觀察。\\
-\item Gradient noise\\
-有助於訓練特別深且復雜的網絡，noise 可改善不良初始化的網路。\\
-\end{itemize}
+\chapter{馬可夫決策}
+
 \section{Markov Chain}
 \quad 當前決策只會影響下個狀態，當前狀態轉移(action)到其他狀態的機率有所差異。
 \section{Markov Reward Process}
@@ -582,6 +564,11 @@ Pong的遊戲是簡單的強化學習中，很好的例子，在ATARI 2600版本
 \end{itemize}
 \newpage
 \chapter{深度強化學習的訓練與控制}
+程式訓練流程：\\
+
+\qquad 擷取影像，將影像裁剪至實際遊戲範圍，並簡化像素以利提高訓練時的計算速度，減少運算時的負擔，過濾顏色只保留球與擊錘，並把取到的影像二元化，取兩幀畫面進行比較，掌握球與擊錘間的相對位置(畫面差)，透過前饋：計算球在環境的狀態及擊錘移動的決策，畫面差透過W1權重來計算球在環境的狀態，透過W2權重並經過啟動函數(activation function)得出擊錘移動的決策。透過產生隨機值的方式來與擊錘移動決策值進行比較，隨機值若落在決策向上移動的區間，擊錘就會向上移動；落在決策向下移動的區間，就會進行該動作。計算discount reward及獎勵的加總。\\
+
+\qquad 在單局結束時，紀錄下該局累積下來的經驗，亦是紀錄該局所修正出來的參數而進行獎勵計算、log probability、\\
 \newpage
 \chapter{問題與討論}
 
